--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assert": "^2.1.0",
     "axios": "^1.6.8",
     "babel": "^6.23.0",
+    "base-64": "^1.0.0",
     "css-select": "^5.1.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
